<resources>
    <string name="app_name">ProjectWolf</string>
    <string name="todo">TODO</string>
    <string name="find_dr">FIND DR.</string>
    <string name="book_your_appointment_today_with_us">book your appointment today, with us!</string>
    <string name="password1">Password</string>
    <string name="email_address">Email Address</string>
    <string name="log_in1">Log In</string>
    <string name="sign_up">Sign Up!</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name="register">Sign Up</string>
    <string name="email">Email</string>
    <string name="surname">Surname</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="chat">CHAT</string>
    <string name="find_doctor">FIND DOCTOR</string>
    <string name="contact_admin">CONTACT ADMIN</string>
    <string name="dr_near_me">DR Near Me</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="calendar">CALENDAR</string>
    <string name="widgets">WIDGETS</string>
    <string name="profile">PROFILE</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="update">Update</string>
    <string name="update_phone">Update Phone</string>
    <string name="update_names">Update Names</string>
    <string name="update_email">Update Email</string>
    <string name="update_password">Update Password</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_full_names">Enter Full Names</string>
    <string name="appointment">APPOINTMENT</string>
    <string name="save">Save</string>
    <string name="description_optional">Description(OPTIONAL)</string>
    <string name="appointment_name">Appointment Name</string>
</resources>