<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".CalendarActivity">

    <TextView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/find_doctor"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AppointmentName"
        android:layout_width="295dp"
        android:layout_height="59dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_date"
        android:hint="@string/appointment_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalenderHeading"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Description"
        android:layout_width="297dp"
        android:layout_height="59dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_bookmarks"
        android:hint="@string/description_optional"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppointmentName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/CalenderHeading"
        android:layout_width="133dp"
        android:layout_height="32dp"
        android:layout_marginTop="144dp"
        android:text="@string/appointment"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#605A5A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_view" />

    <Button
        android:id="@+id/AddAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description" />

</androidx.constraintlayout.widget.ConstraintLayout>